# Curso-de-Linux-Embarcado

./: .gitignore  LICENSE  README.md
apendiceA/: nano_build.tar.xz  prepare.sh
apendiceA/nano_dev/: build.sh
cap10/: busybox_build.tar.xz  prepare.sh
cap10/busybox_dev/: build.sh
cap11/: prepare.sh
cap11/kernel_dev/: build.sh
cap13/: busyboxInstaller.sh  kernelInstaller.sh  rootfsMaker.sh
cap13/glibc/: prepare.sh  stripping.sh  transfer.sh
cap13/glibc/glibc_dev/: build.sh
cap13/init/: create_rcS.sh  rcS.sh
cap14/: prepare.sh
cap14/ssh/: build_ssh.sh  build_ssl.sh  build_zlib.sh  configure_net_interface.sh  install_ssh.sh  transfer.sh  transferencia-teste.tar.xz
cap15/: prepare.sh
cap15/lighttpd/: createStructure.sh  lighttpd_build.tar.xz
cap15/lighttpd/lighttpd_dev/: build_lighttpd.sh  install_lighttpd.sh
cap15/lighttpd/webpage/aplication/: aplication.js
cap15/lighttpd/webpage/html/: dmesg_BBB.txt  index.html
cap15/lighttpd/webpage/style/: style.css
cap15/pcre/: pcre_build.tar.xz
cap15/pcre/pcre_dev/: build_pcre.sh
cap16/: atualizaBD.sh  fritzingSchematic.fzz  prepare.sh  remoteAcess.sql
cap16/aplicacao_final_mysql_BBB/: CMakeLists.txt  main.cpp
cap7/: configSDK.sh  installPutty.sh  installSDK.sh  otherCommands.sh
cap8/: configMicroSD.sh
cap9/: prepare.sh  u-boot_build.tar.xz
cap9/u-boot_build/: MLO  u-boot.img
cap9/u-boot_dev/: build.sh
